tests/NormalTests/paczka2/big_fuzzy/37735542.err
Error in line 3: O62 A807 4,26
Error in line 6: A610 S149 14,0
Error in line 1: SOFt9oat A610 53,5
Error in line 12: 9rAfO A610 83,2
Error in line 18: 9rAfO A807 46,4
Error in line 22: ZxczoLQotL S149 35,2
Error in line 25: A610 S799 10,4
Error in line 26: SOFt9oat A807 84,0
Error in line 30: ZxczoLQotL S149 6,2
Error in line 15: vrheiTkX S149 249,7
Error in line 41: C3Zdo5t S149 12,0
Error in line 44: 9rAfO A610 25,6
Error in line 45: C3Zdo5t S799 58,7
Error in line 43: A610 A807 76,6
Error in line 57: C3Zdo5t S799 36,2
Error in line 52: A610 S149 13,8
Error in line 62: C3Zdo5t A807 71,8
Error in line 69: vrheiTkX A610 21,02
Error in line 74: O62 A807 53,7
Error in line 81: A610 S149 20,9
Error in line 85: A610 A807 19,4
Error in line 87: SOFt9oat A610 81,4
Error in line 86: A610 S149 51,7
Error in line 95: C3Zdo5t S149 82,8
Error in line 98: C3Zdo5t S799 63,4
Error in line 114: C3Zdo5t A610 -1,5
Error in line 97: A610 A807 229,8
Error in line 118: A610 A610 15,0
Error in line 92: O62 S149 214,7
Error in line 122: A610 A807 91,3
Error in line 107: ZxczoLQotL A807 71,1
Error in line 130: 9rAfO S149 24,0
Error in line 113: C3Zdo5t A610 52,6
Error in line 112: vrheiTkX A807 160,9
Error in line 144: ZxczoLQotL S799 54,5
Error in line 148: ZxczoLQotL A807 60,8
Error in line 145: C3Zdo5t A610 94,4
Error in line 150: ZxczoLQotL S799 81,0
Error in line 161: C3Zdo5t S149 88,9
Error in line 173: 9rAfO S149 432,8
Error in line 174: O62 A610 68,5
Error in line 182: C3Zdo5t A610 74,2
Error in line 183: O62 A807 98,0
Error in line 170: vrheiTkX S149 25,2
Error in line 188: SOFt9oat S149 8,6
Error in line 206: C3Zdo5t SÖ99 63,3
Error in line 203: C3Zdo5t S149 40,8
Error in line 207: A610 A807 142,8
Error in line 208: C3Zdo5t S799 27,9
Error in line 216: O62 A807 52,9
Error in line 225: ZxczoLQotL S799 17,18
Error in line 227: vrheiTkX S149 1,4
Error in line 234: A610 A807 262,6
Error in line 239: O62 A80h 69,6
Error in line 222: SOFt9oat A807 159,5
Error in line 243: vrheiTkX S799 -2,5
Error in line 245: 9rAfO A80½ 32,8
